<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Pervasive</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_fragment">Login Fragment</string>
    <string name="message_fragment">Message Fragment</string>
    <string name="submit_message">Submit your message</string>
    <string name="login">Login...</string>
    <string name="set_name">Name</string>
    <string name="set_email">Email</string>
    <string name="set_phone_number">Phone number</string>
    <string name="create_user">Create user</string>
    <string name="gravity_notification">You are now set as BUSY.</string>
    <string name="gravity_notification_title">DO NOT DISTURB</string>
    <string name="gravity_notification_text">Situated display has changed to busy</string>
    <string name="accelerometer_notification">You are now set as AVAILABLE</string>
    <string name="accelerometer_notification_title">I AM AVAILABLE</string>
    <string name="accelerometer_notification_text">Situated display has changed to free</string>


    <!-- Mathias strings -->
    <string name="title_activity_create_user">Create New User</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_login_existing_user">Select Existing User</string>
    <string name="title_activity_profile">Profile</string>

    <string name="btnCreateUser">Create User</string>
    <string name="btnLoginExistingUser">Login With Existing User</string>
    <string name="btnSwitchUser">Switch User</string>
    <string name="btnLogout">Logout</string>
    <string name="btnYes">YES</string>
    <string name="btnNo">NO</string>
    <string name="btnOk">OK</string>

    <string name="select_user">Please select an existing user to proceed</string>
    <string name="please_wait_message">Please wait ...</string>
    <string name="create_user_error_message">There was an error when attempting to create a user on the server. Please try again.</string>
    <string name="create_user_success_message">User was successfully created</string>
    <string name="quit_app_message">Are you sure you want to quit?</string>

    <string name="create_user_loading_title">Creating User</string>
    <string name="create_user_error_title">Error</string>
    <string name="loading_existing_users_title">Downloading Users</string>
    <string name="quit_app_title">Really Quit?</string>

    <string name="action_profile">Profile</string>

    <string name="profile_name">Name:</string>
    <string name="profile_email">E-mail:</string>
    <string name="profile_phone">Phone:</string>

</resources>
