<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="dk.itu.pervasive.fragments.Login">

    <!-- TODO: Update blank fragment layout -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/login"/>

    <EditText
        android:id="@+id/set_name"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/set_name"
        android:visibility="invisible"

        />
    <EditText
        android:id="@+id/set_email"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/set_email"
        android:visibility="invisible"
        />
    <EditText
        android:id="@+id/set_phone_number"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/set_phone_number"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/create_user_button"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/create_user"
        android:visibility="invisible"
        />



</LinearLayout>
